--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
       <ion-side-menus enable-menu-with-back-views="false">
 
         <ion-side-menu-content>
-          <ion-nav-bar class="bar-positive">
+          <ion-nav-bar class="bar-7days">
             <ion-nav-back-button>
             </ion-nav-back-button>
 
@@ -50,7 +50,7 @@
     </script>
 
     <script id="templates/home.html" type="text/ng-template">
-      <ion-view view-title="Welcome">
+      <ion-view view-title="<img src='img/lg_white.png' height='35px'>">
         <ion-content>
            <ul class="result" >
             <li class="news-item"   ng-repeat="new in news">
